--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 
 		<div class="row button-section">
 			<div class="col-twelve">
-				<a href="#" title="Download CV" class="button button-primary">Download CV</a>
+				<a href="cv.pdf" title="Download CV" class="button button-primary">Download CV</a>
 			</div>
 		</div>
 	</section> <!-- /process-->
@@ -616,7 +616,7 @@
 					<span class="icon"><i class="icon-earth"></i></span>
 					<div class="service-content">
 						<h3>On-Page Optimization</h3>
-						<p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
+						<!-- <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p> -->
 					</div>
 				</div>
 
@@ -624,7 +624,7 @@
 					<span class="icon"><i class="icon-earth"></i></span>
 					<div class="service-content">
 						<h3>Off-Page Optimization</h3>
-						<p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
+						<!-- <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p> -->
 					</div>
 				</div>
 
@@ -632,7 +632,7 @@
 					<span class="icon"><i class="icon-pen"></i></span>
 					<div class="service-content">
 						<h3>Content Writing</h3>
-						<p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
+						<!-- <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p> -->
 					</div>
 				</div>
 
@@ -640,7 +640,7 @@
 					<span class="icon"><i class="icon-image"></i></span>
 					<div class="service-content">
 						<h3>Graphics Design</h3>
-						<p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p>
+						<!-- <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p> -->
 					</div>
 				</div>
 			</div> <!-- /services-list -->
@@ -663,13 +663,13 @@
 			<div class="col-four tab-full collapsee">
 				<div class="icon"><i class="icon-mail"></i></div>
 				<h5>Email Me At</h5>
-				<p>krettlelarroza1999@gmail.com</p>
+				<p><a href="mailto:krettlelarroza1999@gmail.com"></a>krettlelarroza1999@gmail.com</p>
 			</div>
 
 			<div class="col-four tab-full">
 				<div class="icon"><i class="icon-phone"></i></div>
 				<h5>Call Me At</h5>
-				<p>Mobile: (+63) 9614412115</p>
+				<p>Mobile: <a href="tel:09614412115"></a>(+63) 9614412115</p>
 			</div>
 
 		</div> <!-- /contact-info -->
@@ -682,10 +682,8 @@
 			<div class="col-six tab-full pull-right social">
 				<ul class="footer-social">
 					<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="#"><i class="fa fa-behance"></i></a></li>
-					<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-					<li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-					<li><a href="#"><i class="fa fa-instagram"></i></a></li>
+					<li><a href="#"><i class="fa fa-paper-plane"></i></a></li>
+					<li><a href="#"><i class="fa fa-envelope"></i></a></li>
 				</ul>
 			</div>
 
