--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 		</div> <!-- /row -->
 	</header> <!-- /header -->
 
-	<!-- intro section ================================================== -->
+	<!-- intro section -->
 	<section id="intro">
 		<div class="intro-overlay"></div>
 		<div class="intro-content">
@@ -59,7 +59,7 @@
 		</div> <!-- /intro-content -->
 	</section> <!-- /intro -->
 
-	<!-- about section ================================================== -->
+	<!-- about section -->
 	<section id="about">
 		<div class="row section-intro">
 			<div class="col-twelve">
@@ -144,8 +144,7 @@
 		</div>
 	</section> <!-- /process-->
 
-	<!-- resume Section
-   ================================================== -->
+	<!-- resume Section -->
 	<section id="resume" class="grey-section">
 		<div class="row section-intro">
 			<div class="col-twelve">
@@ -275,8 +274,7 @@
 		</div> <!-- /resume-timeline -->
 	</section> <!-- /features -->
 
-	<!-- Portfolio Section
-   ================================================== -->
+	<!-- Portfolio Section -->
 	<section id="portfolio">
 		<div class="row section-intro">
 			<div class="col-twelve">
@@ -328,54 +326,6 @@
 							</a>
 						</div>
 					</div> <!-- /folio-item -->
-
-					<!-- <div class="bgrid folio-item">
-						<div class="item-wrap">
-							<img src="/assets/images/portfolio/beetle.jpg" alt="Beetle">
-							<a href="#modal-04" class="overlay">
-								<div class="folio-item-table">
-									<div class="folio-item-cell">
-										<h3 class="folio-title">Beetle</h3>
-										<span class="folio-types">
-											Branding
-										</span>
-									</div>
-								</div>
-							</a>
-						</div>
-					</div>
-
-					<div class="bgrid folio-item">
-						<div class="item-wrap">
-							<img src="/assets/images/portfolio/lighthouse.jpg" alt="Lighthouse">
-							<a href="#modal-05" class="overlay">
-								<div class="folio-item-table">
-									<div class="folio-item-cell">
-										<h3 class="folio-title">Lighthouse</h3>
-										<span class="folio-types">
-											Web Development
-										</span>
-									</div>
-								</div>
-							</a>
-						</div>
-					</div>
-
-					<div class="bgrid folio-item">
-						<div class="item-wrap">
-							<img src="/assets/images/portfolio/salad.jpg" alt="Salad">
-							<a href="#modal-06" class="overlay">
-								<div class="folio-item-table">
-									<div class="folio-item-cell">
-										<h3 class="folio-title">Salad</h3>
-										<span class="folio-types">
-											Branding
-										</span>
-									</div>
-								</div>
-							</a>
-						</div>
-					</div> -->
 
 					<!-- modal popups - begin -->
 					<div id="modal-01" class="popup-modal slider mfp-hide">
@@ -479,129 +429,59 @@
 						</div>
 					</div> <!-- /modal-02 -->
 
-					<!-- <div id="modal-02" class="popup-modal slider mfp-hide">
-
-						<div class="media">
-							<img src="/assets/images/portfolio/modals/m-shutterbug.jpg" alt="" />
-						</div>
-
-						<div class="description-box">
-							<h4>Shutterbug</h4>
-							<p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
-								auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
-							<div class="categories">Web Design</div>
-						</div>
-
-						<div class="link-box">
-							<a href="http://www.behance.net">Details</a>
-							<a href="#" class="popup-modal-dismiss">Close</a>
-						</div>
-
-					</div> -->
-
 					<div id="modal-03" class="popup-modal slider mfp-hide">
-
 						<div class="media">
-							<img src="/assets/images/portfolio/modals/m-clouds.jpg" alt="" />
-						</div>
-
-						<div class="description-box">
-							<h4>Clouds</h4>
-							<p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
-								auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
-							<div class="categories">Web Design</div>
+							<!-- Add the carousel div with the id "imageCarousel" -->
+							<div id="imageCarousel" class="carousel slide" data-ride="carousel">
+								<div class="carousel-inner">
+									<!-- Add your carousel items, each with a different image -->
+									<div class="carousel-item active">
+										<img src="/assets/images/portfolio/modals/seo-1.webp" class="d-block w-100" alt="Image 1">
+									</div>
+									<!-- Add more carousel items as needed -->
+									<div class="carousel-item">
+										<img src="/assets/images/portfolio/modals/seo-2.webp" class="d-block w-100" alt="Image 2">
+									</div>
+									<div class="carousel-item">
+										<img src="/assets/images/portfolio/modals/seo-3.webp" class="d-block w-100" alt="Image 2">
+									</div>
+									<div class="carousel-item">
+										<img src="/assets/images/portfolio/modals/seo-4.webp" class="d-block w-100" alt="Image 2">
+									</div>
+									<div class="carousel-item">
+										<img src="/assets/images/portfolio/modals/seo-5.webp" class="d-block w-100" alt="Image 2">
+									</div>
+									<div class="carousel-item">
+										<img src="/assets/images/portfolio/modals/seo-6.webp" class="d-block w-100" alt="Image 2">
+									</div>
+									<div class="carousel-item">
+										<img src="/assets/images/portfolio/modals/seo-7.webp" class="d-block w-100" alt="Image 2">
+									</div>
+								</div>
+								<!-- Add carousel controls if you want (optional) -->
+								<a class="carousel-control-prev" href="#imageCarousel" role="button" data-slide="prev">
+									<span class="carousel-control-prev-icon" aria-hidden="true"></span>
+									<span class="sr-only">Previous</span>
+								</a>
+								<a class="carousel-control-next" href="#imageCarousel" role="button" data-slide="next">
+									<span class="carousel-control-next-icon" aria-hidden="true"></span>
+									<span class="sr-only">Next</span>
+								</a>
+							</div>
 						</div>
 
 						<div class="link-box">
-							<a href="http://www.behance.net">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
-
 					</div> <!-- /modal-03 -->
-
-					<div id="modal-04" class="popup-modal slider mfp-hide">
-
-						<div class="media">
-							<img src="/assets/images/portfolio/modals/m-beetle.jpg" alt="" />
-						</div>
-
-						<div class="description-box">
-							<h4>Beetle</h4>
-							<p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
-								auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
-							<div class="categories">Branding</div>
-						</div>
-
-						<div class="link-box">
-							<a href="http://www.behance.net">Details</a>
-							<a href="#" class="popup-modal-dismiss">Close</a>
-						</div>
-
-					</div> <!-- /modal-04 -->
-
-					<div id="modal-05" class="popup-modal slider mfp-hide">
-
-						<div class="media">
-							<img src="/assets/images/portfolio/modals/m-lighthouse.jpg" alt="" />
-						</div>
-
-						<div class="description-box">
-							<h4>Lighthouse</h4>
-							<p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
-								auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
-							<div class="categories">Web Development</div>
-						</div>
-
-						<div class="link-box">
-							<a href="http://www.behance.net">Details</a>
-							<a href="#" class="popup-modal-dismiss">Close</a>
-						</div>
-
-					</div> <!-- /modal-05 -->
-
-					<div id="modal-06" class="popup-modal slider mfp-hide">
-
-						<div class="media">
-							<img src="/assets/images/portfolio/modals/m-salad.jpg" alt="" />
-						</div>
-
-						<div class="description-box">
-							<h4>Salad</h4>
-							<p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
-								auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
-							<div class="categories">Branding</div>
-						</div>
-
-						<div class="link-box">
-							<a href="http://www.behance.net">Details</a>
-							<a href="#" class="popup-modal-dismiss">Close</a>
-						</div>
-
-					</div> <!-- /modal-06 -->
-
-
-					<!-- modal popups - end
-	            ============================================================= -->
-
+					<!-- modal popups - end -->
 				</div> <!-- /portfolio-wrapper -->
-
 			</div> <!-- /twelve -->
-
 		</div> <!-- /portfolio-content -->
-
 	</section> <!-- /portfolio -->
-
-	<!-- services Section
-   ================================================== -->
+	<!-- services Section -->
 	<section id="services">
-
 		<div class="overlay"></div>
-
 		<div class="row section-intro">
 			<div class="col-twelve">
 				<h5>Services</h5>
@@ -611,7 +491,6 @@
 
 		<div class="row services-content">
 			<div id="owl-slider" class="owl-carousel services-list">
-				
 				<div class="service">
 					<span class="icon"><i class="icon-earth"></i></span>
 					<div class="service-content">
@@ -669,7 +548,7 @@
 			<div class="col-four tab-full">
 				<div class="icon"><i class="icon-phone"></i></div>
 				<h5>Call Me At</h5>
-				<p>Mobile: <a href="tel:09614412115"></a>(+63) 9614412115</p>
+				<p>Mobile: <a href="tel:09614412115">(+63) 9614412115</a></p>
 			</div>
 
 		</div> <!-- /contact-info -->
@@ -681,9 +560,8 @@
 		<div class="row">
 			<div class="col-six tab-full pull-right social">
 				<ul class="footer-social">
-					<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="#"><i class="fa fa-paper-plane"></i></a></li>
-					<li><a href="#"><i class="fa fa-envelope"></i></a></li>
+					<li><a href="https://t.me/Pepperyyy"><i class="fa fa-paper-plane"></i></a></li>
+					<li><a href="mailto:krettlelarroza1999@gmail.com"><i class="fa fa-envelope"></i></a></li>
 				</ul>
 			</div>
 
