--- a/index.html
+++ b/index.html
@@ -542,13 +542,13 @@
 			<div class="col-four tab-full collapsee">
 				<div class="icon"><i class="icon-mail"></i></div>
 				<h5>Email Me At</h5>
-				<p><a href="mailto:krettlelarroza1999@gmail.com"></a>krettlelarroza1999@gmail.com</p>
+				<p><a href="mailto:krettlelarroza1999@gmail.com" style="color:#6e6e6e;">krettlelarroza1999@gmail.com</a></p>
 			</div>
 
 			<div class="col-four tab-full">
 				<div class="icon"><i class="icon-phone"></i></div>
 				<h5>Call Me At</h5>
-				<p>Mobile: <a href="tel:09614412115">(+63) 9614412115</a></p>
+				<p>Mobile: <a href="tel:09614412115" style="color:#6e6e6e;">(+63) 9614412115</a></p>
 			</div>
 
 		</div> <!-- /contact-info -->
