--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 				<div class="col-twelve">
 					<h5>Hello!</h5>
 					<h1>I'm Krettle Larroza</h1>
+					<p class="text-white font-italic mb-4">your</p>
 					<p class="intro-position">
 						<span>SEO Speacialist</span>
 						<span>Content Writer</span>
@@ -495,7 +496,6 @@
 					<span class="icon"><i class="icon-earth"></i></span>
 					<div class="service-content">
 						<h3>On-Page Optimization</h3>
-						<!-- <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p> -->
 					</div>
 				</div>
 
@@ -503,7 +503,6 @@
 					<span class="icon"><i class="icon-earth"></i></span>
 					<div class="service-content">
 						<h3>Off-Page Optimization</h3>
-						<!-- <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p> -->
 					</div>
 				</div>
 
@@ -511,7 +510,6 @@
 					<span class="icon"><i class="icon-pen"></i></span>
 					<div class="service-content">
 						<h3>Content Writing</h3>
-						<!-- <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p> -->
 					</div>
 				</div>
 
@@ -519,7 +517,13 @@
 					<span class="icon"><i class="icon-image"></i></span>
 					<div class="service-content">
 						<h3>Graphics Design</h3>
-						<!-- <p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit.</p> -->
+					</div>
+				</div>
+
+				<div class="service">
+					<span class="icon"><i class="icon-search"></i></span>
+					<div class="service-content">
+						<h3>Keyword Research</h3>
 					</div>
 				</div>
 			</div> <!-- /services-list -->
